k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---

apiVersion: v1
kind: Namespace
metadata:
  name: qa

---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
