k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: title
  labels:
    app: backend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      name: backend-app
      labels:
        app: backend-app
    spec:
      containers:
        - name: title
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
