k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-svc
spec:
  selector:
    app: node-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
